# ROS-wheeled-robot-master

./: LICENSE  README.md  using_SDK.md
SDK/samples/iat_online_record_sample/: iat_online_record_sample.c
SDK/samples/iat_online_sample/: iat_online_sample.c
SDK/samples/ise_online_sample/: ise_online_sample.c
SDK/samples/sch_translate_sample/: sch_speak_sample.c
SDK/samples/tts_online_sample/: tts_online_sample.c
kinetic/: README.md  Usage.md  usage.md
kinetic/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
kinetic/devel/include/amcl/: AMCLConfig.h
kinetic/devel/include/base_local_planner/: BaseLocalPlannerConfig.h  Position2DInt.h
kinetic/devel/include/costmap_2d/: Costmap2DConfig.h  ObstaclePluginConfig.h  VoxelGrid.h  VoxelPluginConfig.h
kinetic/devel/include/global_planner/: GlobalPlannerConfig.h
kinetic/devel/include/map_msgs/: GetMapROIRequest.h  GetMapROIResponse.h  GetPointMapROIRequest.h  GetPointMapROIResponse.h  GetPointMapRequest.h  GetPointMapResponse.h  OccupancyGridUpdate.h  PointCloud2Update.h  ProjectedMap.h  ProjectedMapInfo.h  ProjectedMapsInfoRequest.h  ProjectedMapsInfoResponse.h  SaveMapRequest.h  SaveMapResponse.h  SetMapProjectionsRequest.h  SetMapProjectionsResponse.h
kinetic/devel/include/move_base/: MoveBaseConfig.h
kinetic/devel/include/move_base_msgs/: MoveBaseAction.h  MoveBaseActionGoal.h  (+5 more)
kinetic/src/config/: global_costmap_params.yaml  joint_names_four_wheel_urdf.yaml
kinetic/src/four_wheel_urdf/: CMakeLists.txt
kinetic/src/navigation/: README.md
kinetic/src/navigation_msgs/: README.md  test
kinetic/src/sound_control/: CMakeLists.txt
kinetic/src/sound_control/launch/: start.launch
kinetic/src/sound_control/src/: command_publisher.cpp  command_publisher_test.cpp  speech_recognizer.c
melodic/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
melodic/msc/8c9ba40d6a27f4bab057cc3bc90dd14d/: urec.data  usr.cdata1589377242  usr.cdata_r
melodic/src/model_visualization/: CMakeLists.txt
melodic/src/sound_control/: CMakeLists.txt
melodic/src/sound_control/launch/: start.launch
melodic/src/sound_control/src/: iat_publisher.cpp  wakeUp.cpp
model/: KINECT XBOX.SLDPRT  Kinect.SLDASM  Rasberry.SLDPRT  base KINECT.SLDPRT  baseboard.SLDPRT  battery.SLDPRT  longsupport.SLDPRT  midboard.SLDPRT  motor.SLDPRT  screen.SLDPRT  shortsupport.SLDPRT  sick_lms511_model.SLDPRT  totalAssem.SLDASM  upperboard.SLDPRT  wheels.SLDPRT
model/kinect/_微软XBOX摄像头/: KINECT XBOX.SLDPRT  Kinect.IGS  Kinect.SLDASM  Kinect.STEP  base KINECT.SLDPRT
model/lidar/: sick_lms511_model.SLDPRT
model/wheel/轮胎建模/: 轮胎模型.SLDPRT
(+175 files in other folders)
